[tool.poetry]
name = "pactum"
version = "0.3.0"
description = "Create API specifications and documentation using Python Language"
keywords = ["api", "specification", "documentation"]
authors = ["Osvaldo Santana Neto <pactum@osantana.me>"]
license = "GPLv3"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"

[tool.pytest.ini_options]
addopts = "--cov=pactum"

[tool.poetry.scripts]
pactum-openapi = "commands.openapi_export:openapi_export"
